--- a/style.css
+++ b/style.css
@@ -1,297 +1,304 @@
 /**************************/
 /* Global styles */
 /**************************/
-*, *::before, *::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 *:focus {
-    outline: none;
+  outline: none;
 }
 
 html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-    font-weight: 400;
+  font-size: 62.5%;
+  box-sizing: border-box;
+  font-weight: 400;
 }
 
 body {
-    background-color: #f3f3f3;
-    color: #444;
-    padding: 2rem;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+  background-color: #f3f3f3;
+  color: #444;
+  padding: 2rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
 }
 
 input {
-    font-family: inherit;
-    font-size: 1.6rem;
-    border: 1px solid transparent;
-    display: block;
-    text-align: center;
-    color: #444;
+  font-family: inherit;
+  font-size: 1.6rem;
+  border: 1px solid transparent;
+  display: block;
+  text-align: center;
+  color: #444;
 }
 
 input::placeholder {
-    text-align: center;
-    color: #bbb;
+  text-align: center;
+  color: #bbb;
 }
 
 .rounded--sm {
-    border-radius: 1rem;
+  border-radius: 1rem;
 }
 
 .display--none {
-    display: none;
+  display: none;
 }
 
 .hidden {
-    opacity: 0;
+  opacity: 0;
 }
 
 .heading--secondary {
-    font-size: 1.7rem;
-    font-weight: 600;
-    margin-bottom: 1.5rem;
+  font-size: 1.7rem;
+  font-weight: 600;
+  margin-bottom: 1.5rem;
 }
 
-.btn, .btn:link, .btn:visited {
-    border: none;
-    font-family: inherit;
-    font-size: 2.2rem;
-    padding: 0;
-    width: auto;
-    cursor: pointer;
-    transition: 0.3s all;
+.btn,
+.btn:link,
+.btn:visited {
+  border: none;
+  font-family: inherit;
+  font-size: 2.2rem;
+  padding: 0;
+  width: auto;
+  cursor: pointer;
+  transition: 0.3s all;
 }
 
-.btn:hover, .btn:link:hover, .btn:visited:hover {
-    color: #666;
+.btn:hover,
+.btn:link:hover,
+.btn:visited:hover {
+  color: #666;
 }
 
 /**************************/
 /* Header */
 /**************************/
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
 }
 
 .welcome-msg {
-    font-size: 1.9rem;
-    font-weight: 500;
+  font-size: 1.9rem;
+  font-weight: 500;
 }
 
 .logo {
-    height: 5.25rem;
+  height: 5.25rem;
 }
 
 /* Login form */
 .login {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  gap: 1rem;
 }
 
 .login__input {
-    width: 12rem;
-    border-radius: 1000rem;
-    transition: all 0.3s;
-    padding: 0.5rem 2rem;
-    color: #444;
+  width: 12rem;
+  border-radius: 1000rem;
+  transition: all 0.3s;
+  padding: 0.5rem 2rem;
+  color: #444;
 }
 
 .login__input:focus {
-    border-color: #666;
+  border-color: #666;
 }
 
 .btn--login {
-    background-color: transparent;
+  background-color: transparent;
 }
-
 
 /**************************/
 /* Main */
 /**************************/
 .app {
-    width: 1000px;
-    margin: 4rem auto;
-    display: grid;
-    grid-template-columns: 1.5fr 1fr;
-    grid-template-rows: auto repeat(3, 15rem) auto;
-    gap: 2rem;
-    transition: 0.3s all;
+  width: 1000px;
+  margin: 4rem auto;
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  grid-template-rows: auto repeat(3, 15rem) auto;
+  gap: 2rem;
+  transition: 0.3s all;
 }
 
 /* Balance section */
 .balance {
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: space-between;
-    grid-column: 1 / -1;
+  margin-bottom: 2rem;
+  display: flex;
+  justify-content: space-between;
+  grid-column: 1 / -1;
 }
 
 .balance__label {
-    font-size: 2.2rem;
-    font-weight: 500;
+  font-size: 2.2rem;
+  font-weight: 500;
 }
 
 .balance__sub {
-    font-size: 1.6rem;
-    color: #888;
+  font-size: 1.6rem;
+  color: #888;
 }
 
 .balance__amount {
-    font-size: 4.5rem;
+  font-size: 4.5rem;
 }
 
 /* Transaction section */
 .transactions {
-    grid-row: 2 / span 3;
-    background-color: white;
-    overflow: hidden;
-    overflow-y: scroll;
+  grid-row: 2 / span 3;
+  background-color: white;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .transaction {
-    padding: 2.25rem 5rem;
-    border-bottom: 1px solid #eee;
-    display: flex;
-    align-items: center;
+  padding: 2.25rem 5rem;
+  border-bottom: 1px solid #eee;
+  display: flex;
+  align-items: center;
 }
 
 .transaction__type {
-    border-radius: 1000rem;
-    font-size: 1.1rem;
-    padding: 0.1rem 1rem;
-    font-weight: 500;
-    color: #fff;
-    text-transform: uppercase;
+  border-radius: 1000rem;
+  font-size: 1.1rem;
+  padding: 0.1rem 1rem;
+  font-weight: 500;
+  color: #fff;
+  text-transform: uppercase;
 }
 
 .transaction__type--loss {
-    background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
 .transaction__type--profit {
-    background-image: linear-gradient(to top left, #39b385, #9be15d)
+  background-image: linear-gradient(to top left, #39b385, #9be15d);
 }
 
 .transaction__date {
-    font-weight: 500;
-    margin-left: 3rem;
+  font-weight: 500;
+  margin-left: 3rem;
 }
 
 .transaction__amount {
-    /*margin-right: 0;*/
-    margin-left: auto;
-    font-size: 1.7rem;
+  /*margin-right: 0;*/
+  margin-left: auto;
+  font-size: 1.7rem;
 }
 
 /* General sidebar section */
-.transfer, .loan, .close {
-    padding: 3rem 4rem;
+.transfer,
+.loan,
+.close {
+  padding: 3rem 4rem;
 }
 
 .side-panel-form {
-    display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
-    gap: 1rem;
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  gap: 1rem;
 }
 
 .side-panel-form__control {
-    grid-row: 1 /2;
-    width: 100%;
-    padding: 0.3rem 1rem;
-    border-radius: 0.7rem;
-    background-color: rgba(255, 255, 255, 0.5);
-    transition: 0.3s all;
-
+  grid-row: 1 /2;
+  width: 100%;
+  padding: 0.3rem 1rem;
+  border-radius: 0.7rem;
+  background-color: rgba(255, 255, 255, 0.5);
+  transition: 0.3s all;
 }
 
 .side-panel-form__control:focus {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 .btn--side-panel {
-    border-radius: 0.7rem;
-    background-color: #fff;
-    font-size: 1.8rem;
-    width: 5rem;
+  border-radius: 0.7rem;
+  background-color: #fff;
+  font-size: 1.8rem;
+  width: 5rem;
 }
 
 .btn--side-panel:hover {
-    background-color: rgba(255, 255, 255, 80%);
+  background-color: rgba(255, 255, 255, 80%);
 }
 
 .side-panel-form__label {
-    grid-row: 2/3;
-    justify-self: center;
-    font-size: 1.3rem;
+  grid-row: 2/3;
+  justify-self: center;
+  font-size: 1.3rem;
 }
 
 /* Transfer section */
 .transfer {
-    background-image: linear-gradient(to top left, #ffb003, #ffcb03);
+  background-image: linear-gradient(to top left, #ffb003, #ffcb03);
 }
 
 /* Loan section */
 .loan {
-    background-image: linear-gradient(to top left, #39b385, #9be15d);
+  background-image: linear-gradient(to top left, #39b385, #9be15d);
 }
 
 /* Account closing section */
 .close {
-    background-image: linear-gradient(to top left, #e52a5a, #ff585f);
+  background-image: linear-gradient(to top left, #e52a5a, #ff585f);
 }
 
 /* Statistics section */
 .section-statistics {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .statistic {
-    display: flex;
-    align-items: baseline;
-    gap: 1rem;
+  display: flex;
+  align-items: baseline;
+  gap: 1rem;
 }
 
 .statistic__name {
-    text-transform: uppercase;
-    font-size: 1.2rem;
+  text-transform: uppercase;
+  font-size: 1.2rem;
 }
 
 .statistic__value {
-    font-size: 2.2rem;
+  font-size: 2.2rem;
 }
 
-.in-amount, .interest-amount {
-    color: #66c873;
+.in-amount,
+.interest-amount {
+  color: #66c873;
 }
 
 .out-amount {
-    color: #f5465d;
+  color: #f5465d;
 }
 
 .btn--sort {
-    font-size: 1.3rem;
-    text-transform: uppercase;
-    justify-self: baseline;
-    background-color: transparent;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  justify-self: baseline;
+  background-color: transparent;
 }
 
 /* Remaining time */
 .section-remaining-time {
-    justify-self: end;
-    align-self: center;
-    font-size: 1.25rem;
+  justify-self: end;
+  align-self: center;
+  font-size: 1.25rem;
 }
 
 .remaining-logout-time {
-    font-weight: 600;
+  font-weight: 600;
 }
